[package]
name = "container"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.0.29", features = ["derive", "env"] }
clap_complete = "4.0.6"
kube = { version = "0.77.0", features = ["runtime", "derive", "ws"] }
k8s-openapi = { version = "0.16.0", features = ["v1_25"] }
tracing = "0.1"
tracing-subscriber = "0.2.0"
futures = "0.3.17"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_yaml = "0.8.21"
tokio = { version = "1.14.0", features = ["full"] }
either = "1.6.1"
edit = "0.1.3"
tokio-stream = { version = "0.1.9", features = ["net"] }
regex = "1.7.1"
console = "0.15.5"
lazy_static = "1.4.0"
colored_json = "3.0.1"
skim = "0.10.2"
directories = "4.0.1"
chrono = { version = "0.4.23", default-features = false }
bollard = "0.14.0"
bytes = "1.4.0"
tokio-util = "0.7.7"
